// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReadMoreLink /> should not render anything if not visible 1`] = `""`;

exports[`<ReadMoreLink /> should render a button with correct label if expanded 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="link"
  className="btn-block read-more__button"
  disabled={false}
  onClick={[Function]}
>
  <FormattedMessage
    id="comment.read_less"
    values={Object {}}
  />
   
  <i
    className="ml-5 cap cap-arrow-68"
  />
</Button>
`;

exports[`<ReadMoreLink /> should render a button with correct label if not expanded 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="link"
  className="btn-block read-more__button"
  disabled={false}
  onClick={[Function]}
>
  <FormattedMessage
    id="project.show.meta.read_more"
    values={Object {}}
  />
   
  <i
    className="ml-5 cap cap-arrow-67"
  />
</Button>
`;
